--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emailjs/browser": "^4.4.1",
     "propease": "file:",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
